Updated plugin to support multiple languages Extended the number of countries in the Europe menu Fixed the Cancel function in Setup Large number of various smaller changes
Signed-off-by: MiLo <milo-software@users.sourceforge.net>

--- a/plugin/City.cfg
+++ b/plugin/City.cfg
@@ -1,18 +1,88 @@
-Nederland/Amsterdam
-Nederland/Arnhem
-Nederland/Assen
-Nederland/Barendrecht
-Nederland/Den_Haag
-Nederland/Groningen
-Nederland/Haarlem
-Nederland/Leeuwarden
-Nederland/Lelystad
-Nederland/Maastricht
-Nederland/Middelburg
-Nederland/Rotterdam
-Nederland/Schiedam
-Nederland/Utrecht
-Nederland/Zwolle
+Netherlands/Alkmaar
+Netherlands/Almere
+Netherlands/Amsterdam
+Netherlands/Apeldoorn
+Netherlands/Arnhem
+Netherlands/Assen
+Netherlands/Breda
+Netherlands/Den_Haag
+Netherlands/Eindhoven
+Netherlands/Groningen
+Netherlands/Heerlen
+Netherlands/Leeuwarden
+Netherlands/Leiden
+Netherlands/Lelystad
+Netherlands/Maastricht
+Netherlands/Middelburg
+Netherlands/Nijmegen
+Netherlands/Roermond
+Netherlands/Rotterdam
+Netherlands/s-Hertogenbosch
+Netherlands/Schiedam
+Netherlands/Terneuzen
+Netherlands/Tilburg
+Netherlands/Utrecht
+Netherlands/Venlo
+Netherlands/Zwolle
+--------------------------------------------------------------------
+Austria/Graz
+Austria/Innsbruck
+Austria/Kaprun
+Austria/Linz
+Austria/Telfs
+Austria/Wien
+--------------------------------------------------------------------
+Belgium/Antwerpen
+Belgium/Brugge
+Belgium/Brussel
+Belgium/Gent
+Belgium/Zaventem
+--------------------------------------------------------------------
+Denmark/Frederikshavn
+Denmark/Kopenhagen
+Denmark/Odense
+--------------------------------------------------------------------
+Czech_Republic/Ceske_Budejovice
+Czech_Republic/Praha
+--------------------------------------------------------------------
+Eire/Cork
+Eire/Dublin
+--------------------------------------------------------------------
+Finland/Helsinki
+Finland/Tampere
+--------------------------------------------------------------------
+France/Bordeaux
+France/Grenoble
+France/Lyon
+France/Marseille
+France/Nantes
+France/Nice
+France/Paris
+France/Toulouse
+--------------------------------------------------------------------
+Germany/Aachen
+Germany/Berlin
+Germany/Bonn
+Germany/Bremen
+Germany/Dortmund
+Germany/Duesseldorf
+Germany/Essen
+Germany/Frankfurt
+Germany/Hamburg
+Germany/Hannover
+Germany/Karlsruhe
+Germany/Koeln
+Germany/Leipzig
+Germany/Mannheim
+Germany/Muenchen
+Germany/Nuernberg
+Germany/Saarbruecken
+Germany/Stuttgart
+--------------------------------------------------------------------
+Greece/Athina
+Greece/Iraklio
+--------------------------------------------------------------------
+Iceland/Reykjavik
 --------------------------------------------------------------------
 Italy/Bozen
 Italy/Capri
@@ -29,57 +99,73 @@ Italy/Pisa
 Italy/Udine
 Italy/Venice
 --------------------------------------------------------------------
-France/La_Ravoire
-France/Marseille
-France/Nice
-France/Paris
---------------------------------------------------------------------
-Switzerland/Bern
-Switzerland/Geneva
-Switzerland/Lausanne
-Switzerland/Zurich
---------------------------------------------------------------------
 Liechtenstein/Mauren
 Liechtenstein/Triesen
 Liechtenstein/Vaduz
 --------------------------------------------------------------------
-Czech_Republic/Ceske_Budejovice
-Czech_Republic/Praha
+Luxembourg/Belvaux
+Luxembourg/Luxembourg
 --------------------------------------------------------------------
+Norway/Bergen
+Norway/Oslo
+--------------------------------------------------------------------
+Poland/Gdansk
+Poland Krakau
+Poland/Łódź
+Poland/Poznań
+Poland/Szczecin
+Poland/Warschau
+Poland/Wrocław
+--------------------------------------------------------------------
+Portugal/Lisboa
+Portugal/Porto
+--------------------------------------------------------------------
+Russia/Moskva
+Russia/Murmansk
+Russia/Saint_Petersburg
+Russia/Vladivostok
+--------------------------------------------------------------------
+Spain/Alicante
 Spain/Barcelona
+Spain/Granada
 Spain/Las_Palmas
 Spain/Madrid
---------------------------------------------------------------------
-Turkey/Alanya
-Turkey/Ankara
-Turkey/Istanbul
-Turkey/Izmir
+Spain/Santander
+Spain/Sevilla
+Spain/Valencia
+Spain/Valladolid
 --------------------------------------------------------------------
 Sweden/Borlange
 Sweden/Goteborg
 Sweden/Stockholm
 Sweden/Umea
 --------------------------------------------------------------------
-Finland/Helsinki
-Finland/Tampere
+Switzerland/Bern
+Switzerland/Geneva
+Switzerland/Lausanne
+Switzerland/Zurich
 --------------------------------------------------------------------
-Norway/Bergen
-Norway/Oslo
+Turkey/Alanya
+Turkey/Ankara
+Turkey/Istanbul
+Turkey/Izmir
 --------------------------------------------------------------------
-Luxembourg/Belvaux
-Luxembourg/Luxembourg
---------------------------------------------------------------------
+United_Kingdom/Aberdeen
+United_Kingdom/Belfast
+United_Kingdom/Birmingham
+United_Kingdom/Bristol
+United_Kingdom/Cardiff
+United_Kingdom/Edinburgh
 United_Kingdom/Glasgow
+United_Kingdom/Hull
+United_Kingdom/Leeds
+United_Kingdom/Liverpool
 United_Kingdom/London
 United_Kingdom/Manchester
---------------------------------------------------------------------
-Eire/Cork
-Eire/Dublin
---------------------------------------------------------------------
-Iceland/Reykjavik
---------------------------------------------------------------------
-Greece/Athina
-Greece/Iraklio
+United_Kingdom/Newcastle
+United_Kingdom/Plymouth
+United_Kingdom/Sheffield
+United_Kingdom/Southampton
 --------------------------------------------------------------------
 Alaska/Crooked_Creek
 Bahamas/Nassau
@@ -88,8 +174,3 @@ Greenland/Kap_Hope
 Jamaica/Santa_Cruz
 Mexico/Frontera
 New_York/New_York_City
---------------------------------------------------------------------
-Russia/Moskva
-Russia/Murmansk
-Russia/Saint_Petersburg
-Russia/Vladivostok
