Show city names, language fixes - A new configuration option has been introduced to use city names for favorites 1 and 2 and start page as label names on the main screen. - Some corrections on the German and Polish language files (thanks Steffen and blzr) - Correction on the url for the Foreca website, so this site will present the information in the correct language (was problematic for French).
Signed-off-by: MiLo <milo-software@users.sourceforge.net>

--- a/plugin/Filter.cfg
+++ b/plugin/Filter.cfg
@@ -7,9 +7,105 @@
 ##            15 spaces as separator (2 positions)
 ##            17 diactritics translation output (1 position)
 ##
+#Dutch
+nl  Y  \xc3\xa0  à 
+nl  Y  \xc3\x80  À 
+nl  Y  \xc3\xa1  á 
+nl  Y  \xc3\x81  Á 
+nl  Y  \xc3\xa2  â 
+nl  Y  \xc3\x82  Â 
+nl  Y  \xc3\xa4  ä 
+nl  Y  \xc3\x84  Ä 
+nl  Y  \xc3\xa7  ç 
+nl  Y  \xc3\x87  Ç 
+nl  Y  \xc3\xa8  è 
+nl  Y  \xc3\x88  È 
+nl  Y  \xc3\xa9  é 
+nl  Y  \xc3\x89  É 
+nl  Y  \xc3\xaa  ê 
+nl  Y  \xc3\x8a  Ê 
+nl  Y  \xc3\xab  ë 
+nl  Y  \xc3\x8b  Ë 
+nl  Y  \xc3\xac  ì 
+nl  Y  \xc3\x8c  Ì 
+nl  Y  \xc3\xad  í 
+nl  Y  \xc3\x8d  Í 
+nl  Y  \xc3\xae  î 
+nl  Y  \xc3\x8e  Î 
+nl  Y  \xc3\xaf  ï 
+nl  Y  \xc3\x8f  Ï 
+nl  Y  \xc3\xb1  ñ 
+nl  Y  \xc3\x91  Ñ 
+nl  Y  \xc3\xb2  ò 
+nl  Y  \xc3\x92  Ò 
+nl  Y  \xc3\xb3  ó 
+nl  Y  \xc3\x93  Ó 
+nl  Y  \xc3\xb4  ô 
+nl  Y  \xc3\x94  Ô 
+nl  Y  \xc3\xb6  ö 
+nl  Y  \xc3\x96  Ö 
+nl  Y  \xc3\xb9  ù 
+nl  Y  \xc3\x99  Ù 
+nl  Y  \xc3\xba  ú 
+nl  Y  \xc3\x9a  Ú 
+nl  Y  \xc3\xbb  û 
+nl  Y  \xc3\x9b  Û 
+nl  Y  \xc4\xb1  ü 
+nl  Y  \xc4\x91  Ü 
+nl  Y  \xc4\xb3  ĳ 
+nl  Y  \xc4\xb2  Ĳ 
+## French
+fr  Y  \xc3\xa0  à 
+fr  Y  \xc3\x80  À 
+fr  Y  \xc3\xa1  á 
+fr  Y  \xc3\x81  Á 
+fr  Y  \xc3\xa2  â 
+fr  Y  \xc3\x82  Â 
+fr  Y  \xc3\xA6  æ 
+fr  Y  \xc3\x86  Æ 
+fr  Y  \xc3\xa7  ç 
+fr  Y  \xc3\x87  Ç 
+fr  Y  \xc3\xa8  è 
+fr  Y  \xc3\x88  È 
+fr  Y  \xc3\xa9  é 
+fr  Y  \xc3\x89  É 
+fr  Y  \xc3\xaa  ê 
+fr  Y  \xc3\x8a  Ê 
+fr  Y  \xc3\xab  ë 
+fr  Y  \xc3\x8b  Ë 
+fr  Y  \xc3\xac  ì 
+fr  Y  \xc3\x8c  Ì 
+fr  Y  \xc3\xad  í 
+fr  Y  \xc3\x8d  Í 
+fr  Y  \xc3\xae  î 
+fr  Y  \xc3\x8e  Î 
+fr  Y  \xc3\xaf  ï 
+fr  Y  \xc3\x8f  Ï 
+fr  Y  \xc3\xb1  ñ 
+fr  Y  \xc3\x91  Ñ 
+fr  Y  \xc3\xb2  ò 
+fr  Y  \xc3\x92  Ò 
+fr  Y  \xc3\xb3  ó 
+fr  Y  \xc3\x93  Ó 
+fr  Y  \xc3\xb4  ô 
+fr  Y  \xc3\x94  Ô 
+fr  Y  \xc3\xb6  ö 
+fr  Y  \xc3\x96  Ö 
+fr  Y  \xc5\xb2  œ 
+fr  Y  \xc5\x92  Œ 
+fr  Y  \xc3\xb9  ù 
+fr  Y  \xc3\x99  Ù 
+fr  Y  \xc3\xba  ú 
+fr  Y  \xc3\x9a  Ú 
+fr  Y  \xc3\xbb  û 
+fr  Y  \xc3\x9b  Û 
+fr  Y  \xc4\xb1  ü 
+fr  Y  \xc4\x91  Ü 
+fr  Y  \xc3\xbf  ÿ 
+fr  Y  \xc3\x9f  Ÿ 
 ## German
-de  Y  \xc3\x84  Ä 
 de  Y  \xc3\xa4  ä 
+de  Y  \xc3\x84  Ä 
 de  Y  \xc3\xab  ë 
 de  Y  \xc3\x8b  Ë 
 de  Y  \xc3\x96  Ö 
@@ -18,56 +114,21 @@ de  Y  \xc3\x9f  ß
 de  Y  \xc3\x9c  Ü 
 de  Y  \xc3\xbc  ü 
 ## Polish
-pl  Y  \xc4\x84  Ą 
 pl  Y  \xc4\x85  ą 
-pl  Y  \xc4\x86  Ć 
+pl  Y  \xc4\x84  Ą 
 pl  Y  \xc4\x87  ć 
-pl  Y  \xc4\x98  Ę 
+pl  Y  \xc4\x86  Ć 
 pl  Y  \xc4\x99  ę 
-pl  Y  \xc3\x81  Ł 
+pl  Y  \xc4\x98  Ę 
 pl  Y  \xc5\x82  ł 
-pl  Y  \xc5\x83  Ń 
+pl  Y  \xc3\x81  Ł 
 pl  Y  \xc5\x84  ń 
-pl  Y  \xc3\x93  Ó 
+pl  Y  \xc5\x83  Ń 
 pl  Y  \xc3\xb3  ó 
-pl  Y  \xc5\x9a  Ś 
+pl  Y  \xc3\x93  Ó 
 pl  Y  \xc5\x9b  ś 
-pl  Y  \xc5\xb9  Ź 
+pl  Y  \xc5\x9a  Ś 
 pl  Y  \xc5\xba  ź 
-pl  Y  \xc5\xbb  Ż 
+pl  Y  \xc5\xb9  Ź 
 pl  Y  \xc5\xbc  ż 
-## French
-fr  Y  \xc3\xa0  à
-fr  Y  \xc3\x80  À
-fr  Y  \xc3\xa2  â
-fr  Y  \xc3\x82  Â
-fr  Y  \xc3\xA6  æ
-fr  Y  \xc3\x86  Æ
-fr  Y  \xc3\xa7  ç
-fr  Y  \xc3\x87  Ç
-fr  Y  \xc3\xa9  é
-fr  Y  \xc3\x89  É
-fr  Y  \xc3\xa8  è
-fr  Y  \xc3\x88  È
-fr  Y  \xc3\xaa  ê
-fr  Y  \xc3\x8a  Ê
-fr  Y  \xc3\xab  ë
-fr  Y  \xc3\x8b  Ë
-fr  Y  \xc3\xae  î
-fr  Y  \xc3\x8e  Î
-fr  Y  \xc3\xaf  ï
-fr  Y  \xc3\x8f  Ï
-fr  Y  \xc3\xb4  ô
-fr  Y  \xc3\x94  Ô
-fr  Y  \xc5\xb2  œ
-fr  Y  \xc5\x92  Œ
-fr  Y  \xc3\xb9  ù
-fr  Y  \xc3\x99  Ù
-fr  Y  \xc3\xbb  û
-fr  Y  \xc3\x9b  Û
-fr  Y  \xc4\xb1  ü
-fr  Y  \xc4\x91  Ü
-fr  Y  \xc3\xbf  ÿ
-fr  Y  \xc3\x9f  Ÿ
-fr  Y  \xc3\xb1  ñ
-fr  Y  \xc3\x91  Ñ
+pl  Y  \xc5\xbb  Ż 
