Added support for the Czech and Russian languages
Signed-off-by: MiLo <milo-software@users.sourceforge.net>

--- a/plugin/Filter.cfg
+++ b/plugin/Filter.cfg
@@ -7,7 +7,7 @@
 ##            15 spaces as separator (2 positions)
 ##            17 diactritics translation output (1 position)
 ##
-#Dutch
+## Dutch
 nl  Y  \xc3\xa0  à 
 nl  Y  \xc3\x80  À 
 nl  Y  \xc3\xa1  á 
@@ -132,3 +132,109 @@ pl  Y  \xc5\xba  ź
 pl  Y  \xc5\xb9  Ź 
 pl  Y  \xc5\xbc  ż 
 pl  Y  \xc5\xbb  Ż 
+## Czech
+cs  Y  \xc3\xa1  á 
+cs  Y  \xc3\x81  Á 
+cs  Y  \xc3\xa4  ä 
+cs  Y  \xc3\x84  Ä 
+cs  Y  \xc4\x8d  č 
+cs  Y  \xc4\x8c  Č 
+cs  Y  \xc4\x8f  ď 
+cs  Y  \xc4\x8e  Ď 
+cs  Y  \xc3\xa9  é 
+cs  Y  \xc3\x89  É 
+cs  Y  \xc4\x9b  ě 
+cs  Y  \xc4\x9a  Ě 
+cs  Y  \xc3\xab  ë 
+cs  Y  \xc3\x8B  Ë 
+cs  Y  \xc3\xad  í 
+cs  Y  \xc3\x8d  Í 
+cs  Y  \xc5\x88  ň 
+cs  Y  \xc5\x87  Ň 
+cs  Y  \xc3\xb3  ó 
+cs  Y  \xc3\x93  Ó 
+cs  Y  \xc3\xb6  ö 
+cs  Y  \xc3\x96  Ö 
+cs  Y  \xc5\x99  ř 
+cs  Y  \xc5\x98  Ř 
+cs  Y  \xc5\xa1  š 
+cs  Y  \xc5\xa0  Š 
+cs  Y  \xc5\xa5  ť 
+cs  Y  \xc5\xa4  Ť 
+cs  Y  \xc3\xba  ú 
+cs  Y  \xc3\x9a  Ú 
+cs  Y  \xc5\xaf  ů 
+cs  Y  \xc5\xae  Ů 
+cs  Y  \xc3\xbc  ü 
+cs  Y  \xc3\x9c  Ü 
+cs  Y  \xc3\xbd  ý 
+cs  Y  \xc3\x9d  Ý 
+cs  Y  \xc5\xbe  ž 
+cs  Y  \xc5\xbd  Ž 
+##Russian
+ru  Y  \xd0\xb0  а 
+ru  Y  \xd0\x90  А 
+ru  Y  \xd0\xb1  б 
+ru  Y  \xd0\x91  Б 
+ru  Y  \xd0\xb2  в 
+ru  Y  \xd0\x92  В 
+ru  Y  \xd0\xb3  г 
+ru  Y  \xd0\x93  Г 
+ru  Y  \xd0\xb4  д 
+ru  Y  \xd0\x94  Д 
+ru  Y  \xd0\xb5  е 
+ru  Y  \xd0\x95  Е 
+ru  Y  \xd1\x91  ё 
+ru  Y  \xd1\x91  Ё 
+ru  Y  \xd0\xb6  ж 
+ru  Y  \xd0\x96  Ж 
+ru  Y  \xd0\xb7  з 
+ru  Y  \xd0\x97  З 
+ru  Y  \xd0\xb8  и 
+ru  Y  \xd0\x98  И 
+ru  Y  \xd0\xb9  й 
+ru  Y  \xd0\x99  Й 
+ru  Y  \xd0\xba  к 
+ru  Y  \xd0\x9a  К 
+ru  Y  \xd0\xbb  л 
+ru  Y  \xd0\x9b  Л 
+ru  Y  \xd0\xbc  м 
+ru  Y  \xd0\x9c  М 
+ru  Y  \xd0\xbd  н 
+ru  Y  \xd0\x9d  Н 
+ru  Y  \xd0\xbe  о 
+ru  Y  \xd0\x9e  О 
+ru  Y  \xd0\xbf  п 
+ru  Y  \xd0\x9f  П 
+ru  Y  \xd1\x80  р 
+ru  Y  \xd0\xa0  Р 
+ru  Y  \xd1\x81  с 
+ru  Y  \xd0\xa1  С 
+ru  Y  \xd1\x82  т 
+ru  Y  \xd0\xa2  Т 
+ru  Y  \xd1\x83  у 
+ru  Y  \xd0\xa3  У 
+ru  Y  \xd1\x84  ф 
+ru  Y  \xd0\xa4  Ф 
+ru  Y  \xd1\x85  х 
+ru  Y  \xd0\xa5  Х 
+ru  Y  \xd1\x86  ц 
+ru  Y  \xd0\xa6  Ц 
+ru  Y  \xd1\x87  ч 
+ru  Y  \xd0\xa7  Ч 
+ru  Y  \xd1\x88  ш 
+ru  Y  \xd0\xa8  Ш 
+ru  Y  \xd1\x89  щ 
+ru  Y  \xd0\xa9  Щ 
+ru  Y  \xd1\x8a  ъ 
+ru  Y  \xd0\xaa  Ъ 
+ru  Y  \xd1\x8b  ы 
+ru  Y  \xd0\xab  Ы 
+ru  Y  \xd1\x8c  ь 
+ru  Y  \xd0\xac  ь 
+ru  Y  \xd1\x8d  э 
+ru  Y  \xd0\xad  Э 
+ru  Y  \xd1\x8e  ю 
+ru  Y  \xd0\xae  Ю 
+ru  Y  \xd1\x8f  я 
+ru  Y  \xd0\xaf  Я 
