--- a/plugin/City.cfg
+++ b/plugin/City.cfg
@@ -38,12 +38,30 @@ Belgium/Brussel
 Belgium/Gent
 Belgium/Zaventem
 --------------------------------------------------------------------
+Czech_Republic/Brno
+Czech_Republic/Ceske_Budejovice
+Czech_Republic/Hradec_Kralove
+Czech_Republic/Jihlava
+Czech_Republic/Karlovy_Vary
+Czech_Republic/Liberec
+Czech_Republic/Olomouc
+Czech_Republic/Ostrava
+Czech_Republic/Pardubice
+Czech_Republic/Plzeň
+Czech_Republic/Praha
+Czech_Republic/Usti_nad_Labem
+Czech_Republic/Zlin
+Czech_Republic/Volyně
+Czech_Republic/Strakonice
+--------------------------------------------------------------------
 Denmark/Frederikshavn
 Denmark/Kopenhagen
 Denmark/Odense
 --------------------------------------------------------------------
+Czech_Republic/Brno
 Czech_Republic/Ceske_Budejovice
 Czech_Republic/Praha
+Czech_Republic/Sokolov
 --------------------------------------------------------------------
 Eire/Cork
 Eire/Dublin
@@ -109,21 +127,32 @@ Luxembourg/Luxembourg
 Norway/Bergen
 Norway/Oslo
 --------------------------------------------------------------------
-Poland/Gdansk
-Poland Krakau
+Poland/Gdańsk
+Poland/Kraków
 Poland/Łódź
 Poland/Poznań
 Poland/Szczecin
-Poland/Warschau
+Poland/Warszawa
 Poland/Wrocław
 --------------------------------------------------------------------
 Portugal/Lisboa
 Portugal/Porto
 --------------------------------------------------------------------
+Russia/Chelyabinsk
+Russia/Irkutsk
+Russia/Kaliningrad
+Russia/Kazan'
 Russia/Moskva
 Russia/Murmansk
+Russia/Nizhniy_Novgorod
+Russia/Novosibirsk
+Russia/Perm
 Russia/Saint_Petersburg
+Russia/Samara
+Russia/Sochi
+Russia/Tol'yatti
 Russia/Vladivostok
+Russia/Yekatarinburg
 --------------------------------------------------------------------
 Spain/Alicante
 Spain/Barcelona
@@ -149,6 +178,15 @@ Turkey/Alanya
 Turkey/Ankara
 Turkey/Istanbul
 Turkey/Izmir
+--------------------------------------------------------------------
+Ukraine/Dnipropetrovs'k
+Ukraine/Donets'k
+Ukraine/Ivano-Frankivs'k
+Ukraine/Kharkiv
+Ukraine/Kiev
+Ukraine/L'viv
+Ukraine/Odesa
+Ukraine/Yalta
 --------------------------------------------------------------------
 United_Kingdom/Aberdeen
 United_Kingdom/Belfast
