Greek characters in filter.cfg
Addition of greek characters if filter.cfg

--- a/plugin/Filter.cfg
+++ b/plugin/Filter.cfg
@@ -238,3 +238,52 @@ ru  Y  \xd1\x8e  ю
 ru  Y  \xd0\xae  Ю 
 ru  Y  \xd1\x8f  я 
 ru  Y  \xd0\xaf  Я 
+## Greek
+el  Y  \xce\xb1  α
+el  Y  \xce\xb2  β
+el  Y  \xce\xb3  γ
+el  Y  \xce\xb4  δ
+el  Y  \xce\xb5  ε
+el  Y  \xce\xb6  ζ
+el  Y  \xce\xb7  η
+el  Y  \xce\xb8  θ
+el  Y  \xce\xb9  ι
+el  Y  \xce\xba  κ
+el  Y  \xce\xbb  λ
+el  Y  \xce\xbc  μ
+el  Y  \xce\xbd  ν
+el  Y  \xce\xbc  ξ
+el  Y  \xce\xbf  ο
+el  Y  \xcf\x80  π
+el  Y  \xcf\x81  ρ
+el  Y  \xcf\x83  σ
+el  Y  \xcf\x84  τ
+el  Y  \xcf\x85  υ
+el  Y  \xcf\x86  φ
+el  Y  \xcf\x87  χ
+el  Y  \xcf\x88  ψ
+el  Y  \xcf\x89  ω
+el  Y  \xcf\x82  ς
+el  Y  \xce\x91  Α
+el  Y  \xce\x92  Β
+el  Y  \xce\x93  Γ
+el  Y  \xce\x94  Δ
+el  Y  \xce\x95  Ε
+el  Y  \xce\x96  Ζ
+el  Y  \xce\x97  Η
+el  Y  \xce\x98  Θ
+el  Y  \xce\x99  Ι
+el  Y  \xce\x9a  Κ
+el  Y  \xce\x9b  Λ
+el  Y  \xce\x9c  Μ
+el  Y  \xce\x9d  Ν
+el  Y  \xce\x9e  Ξ
+el  Y  \xce\x9f  Ο
+el  Y  \xce\xa0  Π
+el  Y  \xce\xa3  Σ
+el  Y  \xce\xac  ά
+el  Y  \xce\xad  έ
+el  Y  \xce\xaf  ί
+el  Y  \xcf\x8c  ό
+el  Y  \xcf\x8e  ώ
+el  Y  \xce\xae  ή
