Greek po and greek cities
Addition of greek language (greek po file).
Addition of major greek cities in filter.cfg

--- a/plugin/City.cfg
+++ b/plugin/City.cfg
@@ -98,7 +98,64 @@ Germany/Saarbruecken
 Germany/Stuttgart
 --------------------------------------------------------------------
 Greece/Athina
-Greece/Iraklio
+Greece/Salonica
+Greece/Patra
+Greece/Iraklion
+Greece/Larissa
+Greece/Volos
+Greece/Hania
+Greece/Kavala
+Greece/Ioannina
+Greece/Halkida
+Greece/Serres
+Greece/Trikala
+Greece/Katerini
+Greece/Pireas
+Greece/Agrinion
+Greece/Alexandreia
+Greece/Alexandroupolis
+Greece/Arta
+Greece/Chios
+Greece/Corfu
+Greece/Didimotiho
+Greece/Drama
+Greece/Edessa
+Greece/Giannitsa
+Greece/Grevena
+Greece/Ierapetra
+Greece/Igoumenitsa
+Greece/Ithaka
+Greece/Kalamata
+Greece/Kalampaka
+Greece/Karpenisi
+Greece/Karditsa
+Greece/Kastoria
+Greece/Kilkis
+Greece/Komotini
+Greece/Korinthos
+Greece/Kos
+Greece/Kozani
+Greece/Lamia
+Greece/Lefkada
+Greece/Megalopoli
+Greece/Mikonos
+Greece/Mitilini
+Greece/Naousa
+Greece/Nafplio
+Greece/Naxos
+Greece/Paros
+Greece/Preveza
+Greece/Poligiros
+Greece/Samos
+Greece/Skiathos
+Greece/Skopelos
+Greece/Sparti
+Greece/Thasos
+Greece/Thiva
+Greece/Rethimno
+Greece/Veroia
+Greece/Xanthi
+Greece/Zante
 --------------------------------------------------------------------
 Iceland/Reykjavik
 --------------------------------------------------------------------
