Add Italian localization and cities. Thanks to mat8861

--- a/plugin/City.cfg
+++ b/plugin/City.cfg
@@ -11108,20 +11108,132 @@ Iran\Zahedan
 Iran\Zanjan
 Iran\Zarand
 --------------------------------------------------------------------
+Italy/Agrigento
+Italy/Alessandria
+Italy/Ancona
+Italy/Andria
+Italy/Aosta
+Italy/Arezzo
+Italy/Ascoli_Piceno
+Italy/Asti
+Italy/Avellino
+Italy/Bari
+Italy/Barletta
+Italy/Belluno
+Italy/Benevento
+Italy/Bergamo
+Italy/Biella
+Italy/Bologna
 Italy/Bozen
+Italy/Brescia
+Italy/Brindisi
+Italy/Cagliari
+Italy/Caltaissetta
+Italy/Campobasso
 Italy/Capri
+Italy/Carbonia
+Italy/Caserta
+Italy/Catania
+Italy/Catanzaro
+Italy/Chieti
+Italy/Como
+Italy/Como
+Italy/Cosenza
+Italy/Cremona
+Italy/Crotone
+Italy/Cuneo
+Italy/Enna
+Italy/Fermo
+Italy/Ferrara
+Italy/Firenze
+Italy/Foggia
+Italy/Forli
+Italy/Frosinone
+Italy/Genova
+Italy/Gorizia
 Italy/Grado
+Italy/Grosseto
+Italy/Iglesias
 Italy/Jesolo
+Italy/Imperia
+Italy/Isernia
+Italy/L'Aquila
+Italy/La_Spezia
+Italy/Lanusei
+Italy/Latina
+Italy/Lecce
+Italy/Lecco
+Italy/Livorno
+Italy/Lodi
+Italy/Lucca
+Italy/Macerata
 Italy/Madone
+Italy/Mantova
+Italy/Massa
+Italy/Matera
 Italy/Melito_di_Napoli
 Italy/Merano
+Italy/Messina
 Italy/Milan
+Italy/Modena
 Italy/Montecarlo
 Italy/Montefino
+Italy/Monza
+Italy/Napoli
+Italy/Novara
+Italy/Nuoro
+Italy/Ogliastra
+Italy/Olbia
+Italy/Oristano
+Italy/Padova
 Italy/Palermo
+Italy/Parma
+Italy/Pavia
+Italy/Perugia
+Italy/Pesaro
+Italy/Pescara
+Italy/Piacenza
 Italy/Pisa
+Italy/Pistoia
+Italy/Pordenone
+Italy/Potenza
+Italy/Prato
+Italy/Ragusa
+Italy/Ravenna
+Italy/Reggio_Calabria
+Italy/Reggio_Emilia
+Italy/Rieti
+Italy/Rimini
+Italy/Rome
+Italy/Rovigo
+Italy/Salerno
+Italy/Sanluri
+Italy/Savona
+Italy/Siena
+Italy/Siracusa
+Italy/Sondrio
+Italy/Taranto
+Italy/Tempio_Pausania
+Italy/Teramo
+Italy/Terni
+Italy/Torino
+Italy/Tortoli
+Italy/Trani
+Italy/Trapani
+Italy/Trento
+Italy/Treviso
+Italy/Trieste
 Italy/Udine
+Italy/Urbino
+Italy/Varese
 Italy/Venice
+Italy/Verbania
+Italy/Vercelli
+Italy/Verona
+Italy/Vibo_valentia
+Italy/Villacidro
+Italy/Vicenza
+Italy/Viterbo
 --------------------------------------------------------------------
 Liechtenstein/Mauren
 Liechtenstein/Triesen
