--- a/plugin/Filter.cfg
+++ b/plugin/Filter.cfg
@@ -113,6 +113,8 @@ de  Y  \xc3\xb6  ö
 de  Y  \xc3\x9f  ß 
 de  Y  \xc3\x9c  Ü 
 de  Y  \xc3\xbc  ü 
+##Italian
+it  Y  \xc3\xa0  à
 ## Polish
 pl  Y  \xc4\x85  ą 
 pl  Y  \xc4\x84  Ą 
