--- a/plugin/control
+++ b/plugin/control
@@ -4,7 +4,7 @@ Description: Weather forecast for the upcoming 10 days
 Section: extra
 Priority: optional
 Maintainer: Bauernbub
-Architecture: mipsel
+Architecture: all
 OE: enigma2-plugin-extensions-Foreca
 Depends: enigma2 (>= 2.6git20090615), python-html
 Homepage: http://www.aaf-digital.info
