--- a/plugin/City.cfg
+++ b/plugin/City.cfg
@@ -11235,6 +11235,117 @@ Italy/Villacidro
 Italy/Vicenza
 Italy/Viterbo
 --------------------------------------------------------------------
+Latvia/Abragciems
+Latvia/Ainazi
+Latvia/Aizkraukle
+Latvia/Aizpute
+Latvia/Akniste
+Latvia/Alksnajciems
+Latvia/Aloja
+Latvia/Aluksne
+Latvia/Ape
+Latvia/Apsuciems
+Latvia/Apsuciems
+Latvia/Baldone
+Latvia/Balozi
+Latvia/Balvi
+Latvia/Bauska
+Latvia/Brizule
+Latvia/Broceni
+Latvia/Berzciems
+Latvia/Cesvaine
+Latvia/Cerkste
+Latvia/Cesis
+Latvia/Dagda
+Latvia/Daugavpils
+Latvia/Dobele
+Latvia/Durbe
+Latvia/Dzedri
+Latvia/Dzirciems
+Latvia/Engure
+Latvia/Grobina
+Latvia/Gulbene
+Latvia/Iecava
+Latvia/Ikskile
+Latvia/Ilukste
+Latvia/Jaunjelgava
+Latvia/Jaunplavas
+Latvia/Jelgava
+Latvia/Jumprava
+Latvia/Jekabpils
+Latvia/Jurmala
+Latvia/Kaive
+Latvia/Kandava
+Latvia/Klapkalnciems
+Latvia/Kolka
+Latvia/Kraslava
+Latvia/Kuldiga
+Latvia/Karsava
+Latvia/Kegums
+Latvia/Kekava
+Latvia/Kesterciems
+Latvia/Kipatciems
+Latvia/Kulciems
+Latvia/Lielaisciems
+Latvia/Lielvarde
+Latvia/Liepaja
+Latvia/Limbazi
+Latvia/Lubana
+Latvia/Ludza
+Latvia/Ligatne
+Latvia/Livani
+Latvia/Madona
+Latvia/Madona
+Latvia/Mersrags
+Latvia/Ogre
+Latvia/Olaine
+Latvia/Ozolnieki
+Latvia/Piltene
+Latvia/Plienciems
+Latvia/Preili
+Latvia/Priekule
+Latvia/Pavilosta
+Latvia/Plavinas
+Latvia/Ragaciems
+Latvia/Rauda
+Latvia/Rideli
+Latvia/Rindzele
+Latvia/Roja
+Latvia/Rundale
+Latvia/Rezekne
+Latvia/Riga
+Latvia/Rujiena
+Latvia/Sabile
+Latvia/Salacgriva
+Latvia/Salaspils
+Latvia/Saldus
+Latvia/Saulkrasti
+Latvia/Sigulda
+Latvia/Skrunda
+Latvia/Smiltene
+Latvia/Staicele
+Latvia/Stende
+Latvia/Strenci
+Latvia/Subate
+Latvia/Seme
+Latvia/Talsi
+Latvia/Tukums
+Latvia/Tireli
+Latvia/Ulbroka
+Latvia/Upesgriva
+Latvia/Valdemarpils
+Latvia/Valka
+Latvia/Valmiera
+Latvia/Vangazi
+Latvia/Vec-Liepaja
+Latvia/Vecmokas
+Latvia/Vecumnieki
+Latvia/Ventspils
+Latvia/Viesite
+Latvia/Vilksala
+Latvia/Vilani
+Latvia/Zilupe
+-------------------------------------------------------------------
 Liechtenstein/Mauren
 Liechtenstein/Triesen
 Liechtenstein/Vaduz
