--- a/plugin/Filter.cfg
+++ b/plugin/Filter.cfg
@@ -115,6 +115,33 @@ de  Y  \xc3\x9c  Ü
 de  Y  \xc3\xbc  ü 
 ##Italian
 it  Y  \xc3\xa0  à
+## Latvian
+lv  Y  \xc4\x80  Ā
+lv  Y  \xc4\x8c  Č
+lv  Y  \xc4\x92  Ē
+lv  Y  \xc4\xa2  Ģ
+lv  Y  \xc4\xaa  Ī
+lv  Y  \xc4\xb6  Ķ
+lv  Y  \xc4\xbb  Ļ
+lv  Y  \xc5\x85  Ņ
+lv  Y  \xc5\x8c  Ō
+lv  Y  \xc5\x96  Ŗ
+lv  Y  \xc5\xa0  Š
+lv  Y  \xc5\xaa  Ū
+lv  Y  \xc5\xbd  Ž
+lv  Y  \xc4\x81  ā
+lv  Y  \xc4\x8d  č
+lv  Y  \xc4\x93  ē
+lv  Y  \xc4\xa3  ģ
+lv  Y  \xc4\xab  ī
+lv  Y  \xc4\xb7  ķ
+lv  Y  \xc4\xbc  ļ
+lv  Y  \xc5\x86  ņ
+lv  Y  \xc5\x8d  ō
+lv  Y  \xc5\x97  ŗ
+lv  Y  \xc5\xa1  š
+lv  Y  \xc5\xab  ū
+lv  Y  \xc5\xbe  ž
 ## Polish
 pl  Y  \xc4\x85  ą 
 pl  Y  \xc4\x84  Ą 
