--- a/plugin/control
+++ b/plugin/control
@@ -1,5 +1,5 @@
-Package: enigma2-plugin-extensions-foreca
-Version: 2.9.1
+﻿Package: enigma2-plugin-extensions-foreca
+Version: 2.9.2
 Description: Weather forecast for the upcoming 10 days
 Section: extra
 Priority: optional
@@ -8,4 +8,4 @@ Architecture: all
 OE: enigma2-plugin-extensions-foreca
 Depends: enigma2 (>= 2.6git20090615), python-html
 Homepage: http://www.aaf-digital.info
-Source: https://github.com/E2OpenPlugins/e2openplugin-Foreca/tree/2cb24b72c510deb1847107691e11779b91722649
+Source: https://github.com/E2OpenPlugins/e2openplugin-Foreca
