Iranian cities updated. Thanks to Persian Prince

--- a/plugin/City.cfg
+++ b/plugin/City.cfg
@@ -10913,200 +10913,201 @@ Greece/Zante
 --------------------------------------------------------------------
 Iceland/Reykjavik
 --------------------------------------------------------------------
-Iran\Abadan
-Iran\Abadeh
-Iran\Abdanan
-Iran\Abhar
-Iran\Abyek
-Iran\Agha Jari
-Iran\Ahar
-Iran\Ahvaz
-Iran\`Ajab Shir
-Iran\Akbarabad
-Iran\Aleshtar
-Iran\`Ali Shah `AvaZ
-Iran\Aligoodarz
-Iran\Alvand
-Iran\Amol
-Iran\Arak
-Iran\Ardabil
-Iran\Ardakan
-Iran\Ardestan
-Iran\Asadabad
-Iran\Astaneh
-Iran\Astara
-Iran\Azad Shahr
-Iran\Azadshahr
-Iran\Azar Shahr
-Iran\Azna
-Iran\Babol
-Iran\Babol Sar
-Iran\Bafq
-Iran\Bahar
-Iran\Bam
-Iran\Bandar-e Anzali
-Iran\Bandar-e Lengeh
-Iran\Bandar-e-Emam Khomeyni
-Iran\Baneh
-Iran\Bardsir
-Iran\Behbahan
-Iran\Behshahr
-Iran\Bijar
-Iran\Birjand
-Iran\Bojnourd
-Iran\Bonab
-Iran\Borazjan
-Iran\Borujen
-Iran\Borujerd
-Iran\Bukan
-Iran\Bushehr
-Iran\Chabahar
-Iran\Chalus
-Iran\Chenaran
-Iran\Damavand
-Iran\Damghan
-Iran\Darab
-Iran\Deh Dasht
-Iran\Dehloran
-Iran\Delijan
-Iran\Do Gonbadan
-Iran\Dorcheh Piaz
-Iran\Dowlatabad
-Iran\Eqbaliyeh
-Iran\Esfarayen
-Iran\Eslamshahr
-Iran\Famast
-Iran\Farrokhshahr
-Iran\Farsan
-Iran\Fasa
-Iran\Felavarjan
-Iran\Fereydun Kenar
-Iran\Fereydunshahr
-Iran\Firuzabad
-Iran\Genaveh
-Iran\Gerash
-Iran\Golpayegan
-Iran\Gonabad
-Iran\Gonbad-e Kavus
-Iran\Gorgan
-Iran\Hamadan
-Iran\Harsin
-Iran\Hashtpar
-Iran\Hashtrud
-Iran\Homayunshahr
-Iran\ilam
-Iran\iranshahr
-Iran\Isfahan
-Iran\istgah-e Rah Ahan-e Hashtgerd
-Iran\istgah-e RahAhan-e Garmsar
-Iran\Javanrud
-Iran\Juybar
-Iran\Kahriz
-Iran\Kalaleh
-Iran\Kamyaran
-Iran\Kangavar
-Iran\Karaj
-Iran\Kashmar
-Iran\Kazerun
-Iran\Kelishad-e Vasuderjan
-Iran\Kerman
-Iran\Kermanshah
-Iran\Khalkhal
-Iran\Khani Yek
-Iran\Khash
-Iran\Khavas Kuh
-Iran\Khomeyn
-Iran\Khorram Darreh
-Iran\Khorramabad
-Iran\Khorramshahr
-Iran\Khvansar
-Iran\Khvoy
-Iran\Kish
-Iran\Kuh Sefid
-Iran\Kuhdasht
-Iran\Langerud
-Iran\Mahabad
-Iran\Malard
-Iran\Malayer
-Iran\Marand
-Iran\Mashhad
-Iran\Masjed-e Soleyman
-Iran\Mehran
-Iran\Mehriz
-Iran\Meybod
-Iran\Miandoab
-Iran\Mikh Sefid
-Iran\Minab
-Iran\Naghadeh
-Iran\Nahavand
-Iran\Najafabad
-Iran\Nazarabad-e Bozorg
-Iran\Neka
-Iran\Neyriz
-Iran\Neyshabur
-Iran\Nurabad
-Iran\Omidiyeh
-Iran\Oshnaviyeh
-Iran\Parsabad
-Iran\Paveh
-Iran\Pishva
-Iran\Qa'en
-Iran\Qahderijan
-Iran\Qarchak
-Iran\Qareh Zia' od Din
-Iran\Qazvin
-Iran\Qishm
-Iran\Qom
-Iran\Qorveh
-Iran\Quchan
-Iran\Rafsanjan
-Iran\Ramhormoz
-Iran\Ramshir
-Iran\Rasht
-Iran\Ravar
-Iran\Rehnan
-Iran\RobaT Karim
-Iran\Rudsar
-Iran\Sabzevar
-Iran\Salmas
-Iran\Sanandaj
-Iran\Saqqez
-Iran\Sarakhs
-Iran\Sari
-Iran\Sarpol-e zahab
-Iran\Saveh
-Iran\Semirom
-Iran\Semnan
-Iran\Shadegan
-Iran\Shahin Dezh
-Iran\Shahr-e Babak
-Iran\Shahr-e Kord
-Iran\ShahreZa
-Iran\Shahrood
-Iran\Shiraz
-Iran\Shushtar
-Iran\Sirjan
-Iran\Sonqor
-Iran\Susa
-Iran\Susangerd
-Iran\Tabas
-Iran\Tabriz
-Iran\Tafresh
-Iran\Taft
-Iran\Takab
-Iran\Takestan
-Iran\Taybad
-Iran\Tehran
-Iran\Tonekabon
-Iran\Torbat-e Heydariyeh
-Iran\Torbat-e Jam
-Iran\Urmia
-Iran\Varamin
-Iran\Yazd
-Iran\Zabol
-Iran\Zahedan
-Iran\Zanjan
-Iran\Zarand
+Iran/`Ajab Shir
+Iran/`Ali Shah `AvaZ
+Iran/Abadan
+Iran/Abadeh
+Iran/Abdanan
+Iran/Abhar
+Iran/Abyek
+Iran/Agha Jari
+Iran/Ahar
+Iran/Ahvaz
+Iran/Akbarabad
+Iran/Aleshtar
+Iran/Aligoodarz
+Iran/Alvand
+Iran/Amol
+Iran/Arak
+Iran/Ardabil
+Iran/Ardakan
+Iran/Ardestan
+Iran/Asadabad
+Iran/Astaneh
+Iran/Astara
+Iran/Azad Shahr
+Iran/Azadshahr
+Iran/Azar Shahr
+Iran/Azna
+Iran/Babol
+Iran/Babol Sar
+Iran/Bafq
+Iran/Bahar
+Iran/Bam
+Iran/Bandar-e Anzali
+Iran/Bandar-e Lengeh
+Iran/Bandar-e-Emam Khomeyni
+Iran/Baneh
+Iran/Bardsir
+Iran/Behbahan
+Iran/Behshahr
+Iran/Bijar
+Iran/Birjand
+Iran/Bojnourd
+Iran/Bonab
+Iran/Borazjan
+Iran/Borujen
+Iran/Borujerd
+Iran/Bukan
+Iran/Bushehr
+Iran/Chabahar
+Iran/Chalus
+Iran/Chenaran
+Iran/Damavand
+Iran/Damghan
+Iran/Darab
+Iran/Deh Dasht
+Iran/Dehloran
+Iran/Delijan
+Iran/Dezful
+Iran/Do Gonbadan
+Iran/Dorcheh Piaz
+Iran/Dowlatabad
+Iran/Eqbaliyeh
+Iran/Esfarayen
+Iran/Eslamshahr
+Iran/Famast
+Iran/Farrokhshahr
+Iran/Farsan
+Iran/Fasa
+Iran/Felavarjan
+Iran/Fereydun Kenar
+Iran/Fereydunshahr
+Iran/Firuzabad
+Iran/Genaveh
+Iran/Gerash
+Iran/Golpayegan
+Iran/Gonabad
+Iran/Gonbad-e Kavus
+Iran/Gorgan
+Iran/Hamadan
+Iran/Harsin
+Iran/Hashtpar
+Iran/Hashtrud
+Iran/Homayunshahr
+Iran/Ilam
+Iran/Iranshahr
+Iran/Isfahan
+Iran/Istgah-e Rah Ahan-e Hashtgerd
+Iran/Istgah-e RahAhan-e Garmsar
+Iran/Javanrud
+Iran/Juybar
+Iran/Kahriz
+Iran/Kalaleh
+Iran/Kamyaran
+Iran/Kangavar
+Iran/Karaj
+Iran/Kashmar
+Iran/Kazerun
+Iran/Kelishad-e Vasuderjan
+Iran/Kerman
+Iran/Kermanshah
+Iran/Khalkhal
+Iran/Khani Yek
+Iran/Khash
+Iran/Khavas Kuh
+Iran/Khomeyn
+Iran/Khorram Darreh
+Iran/Khorramabad
+Iran/Khorramshahr
+Iran/Khvansar
+Iran/Khvoy
+Iran/Kish
+Iran/Kuh Sefid
+Iran/Kuhdasht
+Iran/Langerud
+Iran/Mahabad
+Iran/Malard
+Iran/Malayer
+Iran/Marand
+Iran/Mashhad
+Iran/Masjed-e Soleyman
+Iran/Mehran
+Iran/Mehriz
+Iran/Meybod
+Iran/Miandoab
+Iran/Mikh Sefid
+Iran/Minab
+Iran/Naghadeh
+Iran/Nahavand
+Iran/Najafabad
+Iran/Nazarabad-e Bozorg
+Iran/Neka
+Iran/Neyriz
+Iran/Neyshabur
+Iran/Nurabad
+Iran/Omidiyeh
+Iran/Oshnaviyeh
+Iran/Parsabad
+Iran/Paveh
+Iran/Pishva
+Iran/Qa'en
+Iran/Qahderijan
+Iran/Qarchak
+Iran/Qareh Zia' od Din
+Iran/Qazvin
+Iran/Qishm
+Iran/Qom
+Iran/Qorveh
+Iran/Quchan
+Iran/Rafsanjan
+Iran/Ramhormoz
+Iran/Ramshir
+Iran/Rasht
+Iran/Ravar
+Iran/Rehnan
+Iran/RobaT Karim
+Iran/Rudsar
+Iran/Sabzevar
+Iran/Salmas
+Iran/Sanandaj
+Iran/Saqqez
+Iran/Sarakhs
+Iran/Sari
+Iran/Sarpol-e zahab
+Iran/Saveh
+Iran/Semirom
+Iran/Semnan
+Iran/Shadegan
+Iran/Shahin Dezh
+Iran/Shahr-e Babak
+Iran/Shahr-e Kord
+Iran/ShahreZa
+Iran/Shahrood
+Iran/Shiraz
+Iran/Shushtar
+Iran/Sirjan
+Iran/Sonqor
+Iran/Susa
+Iran/Susangerd
+Iran/Tabas
+Iran/Tabriz
+Iran/Tafresh
+Iran/Taft
+Iran/Takab
+Iran/Takestan
+Iran/Taybad
+Iran/Tehran
+Iran/Tonekabon
+Iran/Torbat-e Heydariyeh
+Iran/Torbat-e Jam
+Iran/Urmia
+Iran/Varamin
+Iran/Yazd
+Iran/Zabol
+Iran/Zahedan
+Iran/Zanjan
+Iran/Zarand
 --------------------------------------------------------------------
 Italy/Agrigento
 Italy/Alessandria
